Remove entwine from index service
Removes entwine code from the index service and replaces
it with standard Java code. Due to to the index service
being involved in many other modules, this commit actually
touches a lot of other modules as well.

Should result in no functional changes.